--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
 dnspython==2.6.1
+Flask==3.0.3
 idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
 pandas==2.2.2
 pip-autoremove==0.10.0
 pymongo==4.8.0
@@ -13,3 +19,4 @@ setuptools==72.1.0
 six==1.16.0
 tzdata==2024.1
 urllib3==2.2.2
+Werkzeug==3.0.3
