--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+arrow==1.3.0
 blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
@@ -17,6 +18,7 @@ pytz==2024.1
 requests==2.32.3
 setuptools==72.1.0
 six==1.16.0
+types-python-dateutil==2.9.0.20240316
 tzdata==2024.1
 urllib3==2.2.2
 Werkzeug==3.0.3
